@@ -1,0 +1,7 @@
+#include "FWCore/PluginManager/interface/ModuleDef.h"
+#include "FWCore/Framework/interface/MakerMacros.h"
+
+#include "wtfRecoLocalTracker/SplitClustersProducer/interface/SplitClustersProducer.h"
+
+DEFINE_SEAL_MODULE();
+DEFINE_ANOTHER_FWK_MODULE(SplitClustersProducer);
